--- a/templates/encuesta/salud_mental.html
+++ b/templates/encuesta/salud_mental.html
@@ -63,7 +63,7 @@ $(document).ready(function() {
     <a href="/salud_mental"class="luz">Mental</a>
 </div>
     <div class="separador"></div>
-    <div class="graficos_widget">
+    <div class="graficos_widgeta">
         <h1>Gráficos Mental</h1>
         <a id="grafico12" href="#" onCLick="click_mental(1)">Estado civil</a>
         <a id="grafico13" href="#" onCLick="click_mental(2)">¿Trata de impedirle que vea a sus amistades?</a>
