--- a/templates/encuesta/salud_familiar.html
+++ b/templates/encuesta/salud_familiar.html
@@ -33,32 +33,32 @@
 
 $(document).ready(function() {
     $("#grafico1").click(function(){
-        $("a.enlace_seleccionado").removeClass('enlace_seleccionado');
-        $("#grafico1").addClass('enlace_seleccionado');
+        $("a.enlace_seleccionado0o").removeClass('enlace_seleccionado0');
+        $("#grafico1").addClass('enlace_seleccionado0');
     });
     
     $("#grafico2").click(function(){
-        $("a.enlace_seleccionado").removeClass('enlace_seleccionado');
-        $("#grafico2").addClass('enlace_seleccionado'); 
+        $("a.enlace_seleccionado0o").removeClass('enlace_seleccionado0');
+        $("#grafico2").addClass('enlace_seleccionado0'); 
     });
 
     $("#grafico3").click(function(){
-        $("a.enlace_seleccionado").removeClass('enlace_seleccionado');
-        $("#grafico3").addClass('enlace_seleccionado'); 
+        $("a.enlace_seleccionado0o").removeClass('enlace_seleccionado0');
+        $("#grafico3").addClass('enlace_seleccionado0'); 
     });
     $("#grafico4").click(function(){
-        $("a.enlace_seleccionado").removeClass('enlace_seleccionado');
-        $("#grafico4").addClass('enlace_seleccionado'); 
+        $("a.enlace_seleccionado0o").removeClass('enlace_seleccionado0');
+        $("#grafico4").addClass('enlace_seleccionado0'); 
     });
 
     $("#grafico5").click(function(){
-        $("a.enlace_seleccionado").removeClass('enlace_seleccionado');
-        $("#grafico5").addClass('enlace_seleccionado'); 
+        $("a.enlace_seleccionado0o").removeClass('enlace_seleccionado0');
+        $("#grafico5").addClass('enlace_seleccionado0'); 
     });
 
     $("#grafico6").click(function(){
-        $("a.enlace_seleccionado").removeClass('enlace_seleccionado');
-        $("#grafico5").addClass('enlace_seleccionado'); 
+        $("a.enlace_seleccionado0o").removeClass('enlace_seleccionado0');
+        $("#grafico5").addClass('enlace_seleccionado0'); 
     });
 });
 </script>
