--- a/templates/encuesta/familia.html
+++ b/templates/encuesta/familia.html
@@ -55,7 +55,7 @@
     <tr>
         <td>{{key|unslugify}}</td>
         <td>{{value.totalv|floatformat}}</td>
-        <td>{{value.vive|floatformat}}</td>
+        <td>{{value.vive|floatformat:1}}</td>
         <td>{{value.porcentaje_viven|floatformat}}</td>
         <td>{{value.porcentaje_comu|floatformat}}</td>
         <td>{{value.porcentaje_fuera|floatformat}}</td>
