--- a/templates/encuesta/agua.html
+++ b/templates/encuesta/agua.html
@@ -57,7 +57,7 @@
 
 <div id="grafo"></div>
 <table>
-<caption>Tabla agua</caption>
+<caption>Fuentes de Agua</caption>
  <thead>
     <tr>
         <th>Fuente</th>
