--- a/templates/encuesta/familia.html
+++ b/templates/encuesta/familia.html
@@ -40,7 +40,7 @@
 
 <div id="grafo"></div>
 <table>
- <caption>Tabla Las Familias(Migración)</caption>
+ <caption>Migración</caption>
  <thead>
     <tr>
         <th>EDADES</th>
