--- a/templates/encuesta/fincas.html
+++ b/templates/encuesta/fincas.html
@@ -74,7 +74,7 @@
 </div>
 <div id="grafo"></div>
 <table>
-<caption>Tabla uso tierra</caption>
+<caption>Uso tierra</caption>
  <thead>
     <tr>
         <th></th>
