--- a/templates/encuesta/luz.html
+++ b/templates/encuesta/luz.html
@@ -9,7 +9,7 @@
     <a href="/luz"class="luz">Luz</a>
 </div>
 <table>
-<caption>Tabla Luz</caption>
+<caption>Luz</caption>
  <thead>
     <tr>
         <th>Fuente</th>
