--- a/templates/encuesta/produccion.html
+++ b/templates/encuesta/produccion.html
@@ -122,7 +122,7 @@ $(document).ready(function() {
 </div>
 <div id="grafo"></div>
 <table>
-<caption>Promedio de productos</caption>
+<caption>Cuántos meses duraba lo que producía y cuanto espera para este año</caption>
  <thead>
     <tr>
         <th>producto</th>
