--- a/templates/encuesta/seguridad.html
+++ b/templates/encuesta/seguridad.html
@@ -7,7 +7,7 @@
     <a href="/produccion"class="luz">Vulnerabilidad</a>
 </div>
 <table>
-<caption>La Seguridad Alimentaria</caption>
+<caption>Seguridad Alimentaria</caption>
  <thead>
     <tr>
         <th>ALIMENTOS</th>
