--- a/media/css/style.css
+++ b/media/css/style.css
@@ -1,16 +1,16 @@
 /* Reset */
 html, body, div, span, h1, h2, h3, h4, h5, h6, p, blockquote,
 a, font, img, ul, li {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	outline: 0;
-	font-size: 100%;
-	vertical-align: baseline;
-	background: transparent;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
 }
 body {
-	line-height: 1;
+    line-height: 1;
 }
 ol, ul {
 	list-style: none;
@@ -23,12 +23,12 @@ ol, ul {
 /* --------------Comienza Generales-------------- */
 
 body {
-  background:#eaeaea url(../imagen/fondolateral.jpg) no-repeat;
-  background-image: ;
-  font-family: 'Trebuchet MS', Helvetica, sans-serif;
-  font-size:14px;
-  padding:0;
-  margin:0;
+    background:#eaeaea url(../imagen/fondolateral.jpg) no-repeat;
+    background-image: ;
+    font-family: 'Trebuchet MS', Helvetica, sans-serif;
+    font-size:14px;
+    padding:0;
+    margin:0;
 }
 
 h1 {
@@ -50,22 +50,22 @@ h1 {
 }
 
 p {
-  text-align:justify;
+    text-align:justify;
 }
 
 
 
 .der{
-  float:right;
+    float:right;
 }
 
 .centro{
-  margin: 0pt auto;
-  padding:0pt;
+    margin: 0pt auto;
+    padding:0pt;
  
 }
 .separador{
-  clear:both;
+    clear:both;
 }
 
 
@@ -76,10 +76,10 @@ p {
 /* --------------Comienza Header-------------- */
 
 #header {
-overflow: hidden;
-height: 70px;
-background-color:#691028;
-border-bottom:#fff 1px solid;
+    overflow: hidden;
+    height: 70px;
+    background-color:#691028;
+    border-bottom:#fff 1px solid;
 /* ----------background-image: url(.);
 background-repeat:repeat-x;-- */
 
@@ -116,7 +116,7 @@ background-repeat:repeat-x;-- */
 #nav a:hover {
     color: #fff;
     background:#970c32;
-        border-radius: 20px;
+    border-radius: 20px;
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
 
@@ -124,42 +124,42 @@ background-repeat:repeat-x;-- */
 
 
 #header_contenedor{
-  width:890px;
-  _width:960px;
-  height:70px;
-  border-radius:7px;
-  -moz-border-radius:7px; 
-  -webkit-border-radius:7px;
-  margin:0pt auto;
-  padding:0pt;
-  background-image: url(../imagen/logo.jpg) ;
-  background-repeat:no-repeat;
-  padding-left:70px;
+    width:890px;
+    _width:960px;
+    height:70px;
+    border-radius:7px;
+    -moz-border-radius:7px; 
+    -webkit-border-radius:7px;
+    margin:0pt auto;
+    padding:0pt;
+    background-image: url(../imagen/logo.jpg) ;
+    background-repeat:no-repeat;
+    padding-left:70px;
 }
 
 
 #contenedor{
-  width:960px;
-  margin-top:15px;
+    width:960px;
+    margin-top:15px;
 }
 
 #sub_header{
-width:960px;
-margin:0 auto;
-height:300px;
+    width:960px;
+    margin:0 auto;
+    height:300px;
 }
 
 #button{
-  background:#35332d;
-  border-color:#daba71;
-  border-width:1px;
-  border-style:solid;
-  height:22px;
-  color:#fff;
-  border-radius:4px;
-  -moz-border-radius:4px; /* Firefox */
-  -webkit-border-radius:4px; /* Safari y Chrome */ 
-  margin-left:7px;
+    background:#35332d;
+    border-color:#daba71;
+    border-width:1px;
+    border-style:solid;
+    height:22px;
+    color:#fff;
+    border-radius:4px;
+    -moz-border-radius:4px; /* Firefox */
+    -webkit-border-radius:4px; /* Safari y Chrome */ 
+    margin-left:7px;
 }
 .pimp {
     width: 960px;
@@ -173,53 +173,53 @@ height:300px;
 }
 
 #pasos{
-  background-image: url(../imagen/pasos.png);
-  width:420px;
-  height:235px;
-  *height:285px;
-  *width:470px;
-  float:right;
-  margin-top:8px;
-  padding:25px;
+    background-image: url(../imagen/pasos.png);
+    width:420px;
+    height:235px;
+    *height:285px;
+    *width:470px;
+    float:right;
+    margin-top:8px;
+    padding:25px;
 }
 
 .pasos_elementos{
-  height:50px;
-  border-bottom:#3a4d29 1px dotted;
-  color:#374133;
-  padding-top:10px;
+    height:50px;
+    border-bottom:#3a4d29 1px dotted;
+    color:#374133;
+    padding-top:10px;
 }
 
 .pasos_elementos img{
-  float:left;
-  margin-right:15px;
+    float:left;
+    margin-right:15px;
 }
 
 #pasos a, #pasos a:visited{
-  padding-top:7px;
-  padding-bottom:7px;
-  padding-left:15px;
-  padding-right:15px;
-  background: #85a846 url(../imagen/fondo_consultar_boton.png) repeat-x;
-  color:#fff;
-  font-size:22px;
-  text-decoration:none;
-  border:#94b957 1px solid;
-  text-shadow: 0px -1px 0px #37461c;
-  -moz-text-shadow: 0px -1px 0px #37461c;
-  -webkit-text-shadow: 0px -1px 0px #37461c;
-  border-radius:100px;
-  -moz-border-radius:100px; 
-  -webkit-border-radius:100px;
-  float:right;
-  box-shadow: 0px 0px 6px #19200d;
-  -moz-box-shadow: 0px 0px 6px #19200d;
-  -khtml-box-shadow: 0px 0px 6px #19200d;
-  -webkit-box-shadow: 0px 0px 6px #19200d;	
+    padding-top:7px;
+    padding-bottom:7px;
+    padding-left:15px;
+    padding-right:15px;
+    background: #85a846 url(../imagen/fondo_consultar_boton.png) repeat-x;
+    color:#fff;
+    font-size:22px;
+    text-decoration:none;
+    border:#94b957 1px solid;
+    text-shadow: 0px -1px 0px #37461c;
+    -moz-text-shadow: 0px -1px 0px #37461c;
+    -webkit-text-shadow: 0px -1px 0px #37461c;
+    border-radius:100px;
+    -moz-border-radius:100px; 
+    -webkit-border-radius:100px;
+    float:right;
+    box-shadow: 0px 0px 6px #19200d;
+    -moz-box-shadow: 0px 0px 6px #19200d;
+    -khtml-box-shadow: 0px 0px 6px #19200d;
+    -webkit-box-shadow: 0px 0px 6px #19200d;	
 }
 
 #pasos a:hover{
-  background: #85a846;
+    background: #85a846;
 }
 /* --------------Termina Header-------------- */
 
@@ -228,7 +228,7 @@ height:300px;
 #menu ul {
     /*background:#c7c7c7;*/
 
-border-bottom:#fff 1px solid;
+    border-bottom:#fff 1px solid;
     list-style: none;
     font-size: 14px;
     font-weight: bold;
@@ -243,7 +243,7 @@ border-bottom:#fff 1px solid;
 }
 
 #menu ul li {
-display: inline;
+    display: inline;
 
 }
 #menu ul li a:link, #menu ul li a:visited {
@@ -254,17 +254,17 @@ display: inline;
     text-decoration: none;
     border-top-right-radius:5px;
     border-top-left-radius:5px;
-   -moz-border-radius-topright:5px;
-   -moz-border-radius-topleft:5px;
-   -webkit-border-top-left-radius:5px;
-   -webkit-border-top-right-radius:5px;
+    -moz-border-radius-topright:5px;
+    -moz-border-radius-topleft:5px;
+    -webkit-border-top-left-radius:5px;
+    -webkit-border-top-right-radius:5px;
     margin-right:6px;
     font-size:13px;
 }
 
 #menu ul li a:hover, #menu ul li a:active{
-color: #fff;
-background:#691028;
+    color: #fff;
+    background:#691028;
 }
 
 /* ---------------Termina menu linea base*/
@@ -273,58 +273,58 @@ background:#691028;
 
 /* --------------Comienza contenido--------------- */
 #contenido{
-  width:960px;
-  !width:960px;
-  color:#5d5d5d;
+    width:960px;
+    !width:960px;
+    color:#5d5d5d;
  }
 
 #colum_izq{
-  width:140px;
-  margin-right:10px;
-  background:#d9cfbf;
-  border-radius:6px;
-  -moz-border-radius:6px; /* Firefox */
-  -webkit-border-radius:6px; /* Safari y Chrome */ 
-  padding:5px;
-  float: left;
+    width:140px;
+    margin-right:10px;
+    background:#d9cfbf;
+    border-radius:6px;
+    -moz-border-radius:6px; /* Firefox */
+    -webkit-border-radius:6px; /* Safari y Chrome */ 
+    padding:5px;
+    float: left;
 }
 .enlace_sidebar{
-  color:#000;
-  font-weight:bold;
-  font-size:14px;
-  height:23px;
-  padding-top:7px;
-  padding-left:30px;
+    color:#000;
+    font-weight:bold;
+    font-size:14px;
+    height:23px;
+    padding-top:7px;
+    padding-left:30px;
 }
 
 
 #colum_der{
-  width:960px;
-  padding:0px;
-  margin: 0px 0px 18px 0px;
-  border-radius: 6px;
-  -moz-border-radius:6px; /* Firefox */
-  -webkit-border-radius:6px; /* Safari y Chrome */ 
+    width:960px;
+    padding:0px;
+    margin: 0px 0px 18px 0px;
+    border-radius: 6px;
+    -moz-border-radius:6px; /* Firefox */
+    -webkit-border-radius:6px; /* Safari y Chrome */ 
 }
 
 #colum_der img{
-  margin-bottom:3px;
+    margin-bottom:3px;
 }
 #titulo{
-   background:#c7c7c7 url(../imagen/fondo_titulo.jpg) repeat-x;
-   font-size:20px;
-   font-weight:bold;
-   padding:7px;
-   width:948px;
-   height:20px;
-   color:#f8f7f7;
-   text-shadow: 0px -1px 3px #483916;
-   border-top-right-radius:7px;
-   border-top-left-radius:7px;
-   -moz-border-radius-topright:7px;
-   -moz-border-radius-topleft:7px;
-   -webkit-border-top-left-radius:7px;
-   -webkit-border-top-right-radius:7px;
+    background:#c7c7c7 url(../imagen/fondo_titulo.jpg) repeat-x;
+    font-size:20px;
+    font-weight:bold;
+    padding:7px;
+    width:948px;
+    height:20px;
+    color:#f8f7f7;
+    text-shadow: 0px -1px 3px #483916;
+    border-top-right-radius:7px;
+    border-top-left-radius:7px;
+    -moz-border-radius-topright:7px;
+    -moz-border-radius-topleft:7px;
+    -webkit-border-top-left-radius:7px;
+    -webkit-border-top-right-radius:7px;
 }
 
 #filtros{
@@ -356,31 +356,31 @@ background:#691028;
 }
 
 #filtros a, #filtros a:visited{
-  padding-top:6px;
-  padding-bottom:6px;
-  padding-left:8px;
-  padding-right:8px;
-  background: #85a846 url(../imagen/fondo_consultar_boton.png) repeat-x;
-  color:#fff;
-  margin-top:4px;
-  margin-right:5px;
-  font-size:13px;
-  font-weight:bold;
-  text-decoration:none;
-  border:#d7ab32 1px solid;
-  text-shadow: 0px -1px 0px #d7ab32;
-  -moz-text-shadow: 0px -1px 0px #d7ab32;
-  -webkit-text-shadow: 0px -1px 0px #d7ab32;
-  border-radius:100px;
-  -moz-border-radius:100px; 
-  -webkit-border-radius:100px;
-  float:right;
-  margin-right:12px;
+    padding-top:6px;
+    padding-bottom:6px;
+    padding-left:8px;
+    padding-right:8px;
+    background: #85a846 url(../imagen/fondo_consultar_boton.png) repeat-x;
+    color:#fff;
+    margin-top:4px;
+    margin-right:5px;
+    font-size:13px;
+    font-weight:bold;
+    text-decoration:none;
+    border:#d7ab32 1px solid;
+    text-shadow: 0px -1px 0px #d7ab32;
+    -moz-text-shadow: 0px -1px 0px #d7ab32;
+    -webkit-text-shadow: 0px -1px 0px #d7ab32;
+    border-radius:100px;
+    -moz-border-radius:100px; 
+    -webkit-border-radius:100px;
+    float:right;
+    margin-right:12px;
 
 }
 
 #filtros a:hover{
-  background: #eec116;
+    background: #eec116;
 }
 
 #contenido_interno{
@@ -402,9 +402,9 @@ background:#691028;
 }
 
 #index_left{
-  width:380px;
-  float:left;
-  margin-right:5px;
+    width:380px;
+    float:left;
+    margin-right:5px;
 }
 
 #index_left h2{ 
@@ -464,13 +464,13 @@ background:#691028;
     margin-left:8px;
 }
 #index_right{
-  width:540px;
-  float:right;
+    width:540px;
+    float:right;
 }
 
 #index_right p{
-  line-height:1.3;
-  font-size:13px;
+    line-height:1.3;
+    font-size:13px;
 }
 #index_right h2{ 
     font-size:18px;
@@ -480,7 +480,7 @@ background:#691028;
     border-bottom:#3d3123 1px dotted;
 }
 #foto_menu{
-  margin-right:10px;
+    margin-right:10px;
 }
 
 #pintar a:hover {
@@ -518,26 +518,25 @@ background:#691028;
 }
 
 #boton{
-padding-left:15px;
-padding-right:15px;
-  background: #85a846 url(../imagen/fondo_consultar_boton.png) repeat-x;
-  color:#fff;
-  font-size:20px;
-  text-decoration:none;
-  border:#d7ab32 1px solid;
-  text-shadow: 0px -1px 1px #d7ab32;
-  -moz-text-shadow: 0px -1px 1px #d7ab32;
-  -webkit-text-shadow: 0px -1px 1px #d7ab32;
-  border-radius:100px;
-  -moz-border-radius:100px; 
-  -webkit-border-radius:100px;
-  font-weight:bold;
+    padding-left:15px;
+    padding-right:15px;
+    background: #85a846 url(../imagen/fondo_consultar_boton.png) repeat-x;
+    color:#fff;
+    font-size:20px;
+    text-decoration:none;
+    border:#d7ab32 1px solid;
+    text-shadow: 0px -1px 1px #d7ab32;
+    -moz-text-shadow: 0px -1px 1px #d7ab32;
+    -webkit-text-shadow: 0px -1px 1px #d7ab32;
+    border-radius:100px;
+    -moz-border-radius:100px; 
+    -webkit-border-radius:100px;
+    font-weight:bold;
 
 }
 
 #boton:hover{
-
-  background: #eec116 ;
+    background: #eec116 ;
 
 }
 #contenido_interno form{
@@ -609,11 +608,11 @@ padding-right:15px;
     *width:877px;
     height:35px;
     background:#dddcd1;
-  border-radius:3px;
-  -moz-border-radius:3px; 
-  -webkit-border-radius:3px;
-  float:left;
-  margin-bottom:10px;
+    border-radius:3px;
+    -moz-border-radius:3px; 
+    -webkit-border-radius:3px;
+    float:left;
+    margin-bottom:10px;
 }
 
 #contenedor_servicio a{
@@ -643,29 +642,29 @@ padding-right:15px;
 .graficos_widget{
     width:240px;
     background: #dadada;
-   border-top-right-radius:7px;
-   border-top-left-radius:7px;
-   -moz-border-radius-topright:7px;
-   -moz-border-radius-topleft:7px;
-   -webkit-border-top-left-radius:7px;
-   -webkit-border-top-right-radius:7px;
-   border:#ebebe4 1px solid;
-   margin-bottom:10px;
-   float:right;
+    border-top-right-radius:7px;
+    border-top-left-radius:7px;
+    -moz-border-radius-topright:7px;
+    -moz-border-radius-topleft:7px;
+    -webkit-border-top-left-radius:7px;
+    -webkit-border-top-right-radius:7px;
+    border:#ebebe4 1px solid;
+    margin-bottom:10px;
+    float:right;
 }
 
 .graficos_widget h1{
-   border-top-right-radius:7px;
-   border-top-left-radius:7px;
-   -moz-border-radius-topright:7px;
-   -moz-border-radius-topleft:7px;
-   -webkit-border-top-left-radius:7px;
-   -webkit-border-top-right-radius:7px;
-   background:#c9c7b6 url(../imagen/fondo_widget_titulo.png);
-   color:#6c6c6c;
-   font-size:16px;
-   margin:0px;
-   padding:5px 10px 5px 10px;
+    border-top-right-radius:7px;
+    border-top-left-radius:7px;
+    -moz-border-radius-topright:7px;
+    -moz-border-radius-topleft:7px;
+    -webkit-border-top-left-radius:7px;
+    -webkit-border-top-right-radius:7px;
+    background:#c9c7b6 url(../imagen/fondo_widget_titulo.png);
+    color:#6c6c6c;
+    font-size:16px;
+    margin:0px;
+    padding:5px 10px 5px 10px;
 }
 
 .graficos_widget a{
@@ -702,29 +701,29 @@ padding-right:15px;
 .graficos_widgeta{
     width:240px;
     background: #dadada;
-   border-top-right-radius:7px;
-   border-top-left-radius:7px;
-   -moz-border-radius-topright:7px;
-   -moz-border-radius-topleft:7px;
-   -webkit-border-top-left-radius:7px;
-   -webkit-border-top-right-radius:7px;
-   border:#ebebe4 1px solid;
-   margin-bottom:10px;
-   float:right;
+    border-top-right-radius:7px;
+    border-top-left-radius:7px;
+    -moz-border-radius-topright:7px;
+    -moz-border-radius-topleft:7px;
+    -webkit-border-top-left-radius:7px;
+    -webkit-border-top-right-radius:7px;
+    border:#ebebe4 1px solid;
+    margin-bottom:10px;
+    float:right;
 }
 
 .graficos_widgeta h1{
-   border-top-right-radius:7px;
-   border-top-left-radius:7px;
-   -moz-border-radius-topright:7px;
-   -moz-border-radius-topleft:7px;
-   -webkit-border-top-left-radius:7px;
-   -webkit-border-top-right-radius:7px;
-   background:#c9c7b6 url(../imagen/fondo_widget_titulo.png);
-   color:#6c6c6c;
-   font-size:16px;
-   margin:0px;
-   padding:5px 10px 5px 10px;
+    border-top-right-radius:7px;
+    border-top-left-radius:7px;
+    -moz-border-radius-topright:7px;
+    -moz-border-radius-topleft:7px;
+    -webkit-border-top-left-radius:7px;
+    -webkit-border-top-right-radius:7px;
+    background:#c9c7b6 url(../imagen/fondo_widget_titulo.png);
+    color:#6c6c6c;
+    font-size:16px;
+    margin:0px;
+    padding:5px 10px 5px 10px;
 }
 
 .graficos_widgeta a{
@@ -762,12 +761,12 @@ padding-right:15px;
 /* fin de los grafos que sobrepasan*/
 
 #grafo{
-   border-radius:7px;
-   -moz-border-radius:7px;
-   -webkit-border-radius:7px;
-   background: #fff;
-   width:660px;
-padding-left:20px;
+    border-radius:7px;
+    -moz-border-radius:7px;
+    -webkit-border-radius:7px;
+    background: #fff;
+    width:660px;
+    padding-left:20px;
 
 }
 
@@ -782,17 +781,17 @@ padding-left:20px;
 }
 
 #footer_contenedor{
-  height:16px;
-  width:960px;
-  padding-top:10px;
+    height:16px;
+    width:960px;
+    padding-top:10px;
 }
 #logo_footer{
-  width:45px;
-  height:60px;
-  float:left;
-  background-image: url(../imagen/logofooter.png);
-  background-repeat: no-repeat;
-  margin-right:10px;
+    width:45px;
+    height:60px;
+    float:left;
+    background-image: url(../imagen/logofooter.png);
+    background-repeat: no-repeat;
+    margin-right:10px;
 }
 #creditos{
     color:#756f65;
@@ -842,7 +841,7 @@ table {
 
 th{
 	font: bold 10px/22px "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
-	color: #473f31;
+	color: #000;
 	border-right: 1px solid #ded3ba;
 	border-bottom: 1px solid #ded3ba;
 	letter-spacing: 1px;
@@ -982,9 +981,112 @@ tbody tr td:first-child {
 
 * html tr td.alt,
 * html tr.alt td.alt {
-background-color:#edf3f3;
+    background-color:#edf3f3;
 }
 
 /* TERMINA CSS Especial para las tablas */
 
+/*Empieza el slide tipo MAC :P*/
+#gallery{
+    /* CSS3 Box Shadow */
+    -moz-box-shadow:0 0 3px #AAAAAA;
+    -webkit-box-shadow:0 0 3px #AAAAAA;
+    box-shadow:0 0 3px #AAAAAA;
+
+    /* CSS3 Rounded Corners */
+
+    -moz-border-radius-bottomleft:4px;
+    -webkit-border-bottom-left-radius:4px;
+    border-bottom-left-radius:4px;
+
+    -moz-border-radius-bottomright:4px;
+    -webkit-border-bottom-right-radius:4px;
+    border-bottom-right-radius:4px;
+
+    -moz-border-radius-topright:4px;
+    -webkit-border-top-right-radius:4px;
+    border-top-right-radius:4px;
+
+    -moz-border-radius-topleft:4px;
+    -webkit-border-top-left-radius:4px;
+    border-top-left-radius:4px;
+
+    border:1px solid white;
+
+    background:url(../imagen/img/panel.jpg) repeat-x bottom center #ffffff;
+
+    /* The width of the gallery */
+    width:948px;
+    overflow:hidden;
+}
+#slides{
+	/* This is the slide area */
+	height:400px;
+	
+	/* jQuery changes the width later on to the sum of the widths of all the slides. */
+	width:948px;
+	overflow:hidden;
+}
+
+.slide{
+	float:left;
+}
+
+#menu2{
+	/* This is the container for the thumbnails */
+	height:45px;
+}
+#menu2 ul{
+	margin:0px;
+	padding:0px;
+}
+
+#menu2 li{
+	/* Every thumbnail is a li element */
+	width:60px;
+	display:inline-block;
+	list-style:none;
+	height:45px;
+	overflow:hidden;
+}
+
+#menu2 li.inact:hover{
+	/* The inactive state, highlighted on mouse over */
+	background:url(../imagen/img/pic_bg.png) repeat;
+}
+
+#menu2 li.act,li.act:hover{
+	/* The active state of the thumb */
+	background:url(../imagen/img/active_bg.png) no-repeat;
+}
+
+#menu2 li.act a{
+	cursor:default;
+}
+
+.fbar{
+	/* The left-most vertical bar, next to the first thumbnail */
+	width:2px;
+	background:url(../imagen/img/divider.png) no-repeat right;
+}
+
+#menu2 li a{
+	display:block;
+	background:url(../imagen/img/divider.png) no-repeat right;
+	height:35px;
+	padding-top:10px;
+}
+
+#menu2 a img{
+	border:none;
+}
+#main{
+	/* The main container */
+	margin:15px auto;
+	text-align:center;
+	width:948px;
+	position:relative;
+}
+
+/*Termina el slide*/
 
