--- a/templates/encuesta/inicio.html
+++ b/templates/encuesta/inicio.html
@@ -79,7 +79,7 @@
                             <a href="/alimento" class="seguridad">Alimento</a>
                             <a href="/servicios"class="servicios">Servicios</a>
                             <a href="/servicios"class="salud">Salud</a>
-                            <a href="/servicios"class="cultivos">Finca</a>
+                            <a href="/finca"class="cultivos">Finca</a>
                             <a href="/ingresos"class="ingresos">Ingresos</a>
                             <a href="/equipos"class="bienes">Bienes</a>
                             <a href="/ahorro_credito" class="ahorro">Ahorro y Crédito</a>
