--- a/templates/encuesta/inicio.html
+++ b/templates/encuesta/inicio.html
@@ -73,7 +73,7 @@
                     <div id="indicadores" class="der">
                         <h2 class="titulo_indicadores">INDICADORES</h2>
                         <div id="contenedor_indicadores">
-                            <a href="#" class="familia">Datos Generales</a>
+                            <a href="/datos_generales" class="familia">Datos Generales</a>
                             <a href="/organizaciones" class="organizacion">Organización</a>
                             <a href="/familias" class="migracion">Migracion</a>
                             <a href="/alimento" class="seguridad">Alimento</a>
