--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
         
         <div id="menu">
             <ul>
-                <li><a href="#">Datos Generales</a></li>
+                <li><a href="/datos_generales">Datos Generales</a></li>
                 <li><a href="/organizaciones">Organización</a></li>
                 <li><a href="/familias">Migración</a></li>
                 <li><a href="/alimento">Alimentos</a></li>
