--- a/templates/index.html
+++ b/templates/index.html
@@ -4,21 +4,23 @@
     <link href="{{MEDIA_URL}}css/visualize-light.css" rel="stylesheet" type="text/css" media="screen" />
     <script type="text/javascript" src="{{MEDIA_URL}}js/excanvas.js"></script>
     <script type="text/javascript" src="{{MEDIA_URL}}js/visualize.jQuery.js"></script>
-	<script type="text/javascript" src="{{MEDIA_URL}}js/easySlider1.7.js"></script>
-	<script type="text/javascript">
-		$(document).ready(function(){	
-			$("#slider").easySlider({
-				auto: true, 
-				continuous: true,
-				numeric: true,
-                speed: 800,
-                pause: 4000,
-                controlsShow: true,
-			});
-		});
-	</script>
- {%endblock%}	
-  {% block pimp %}
+    <link rel="stylesheet" href="{{MEDIA_URL}}css/nivo-slider.css" type="text/css" media="screen" />
+    <script src="{{MEDIA_URL}}js/jquery.nivo.slider.pack.js" type="text/javascript"></script>
+ {%endblock%}
+ {% block pimp2 %}
+<!--COMIENZA EL SLIDE PRINCIPAL-->
+<div id="slider" class="nivoSlider">
+	<img src="{{MEDIA_URL}}imagen/imagen.png" alt="" />
+	<img src="{{MEDIA_URL}}imagen/imagen1.png" alt="" />
+	<img src="{{MEDIA_URL}}imagen/imagen2.png" alt="" />
+</div>
+<!--FINALIZA EL SLIDE-->
+
+<script type="text/javascript">
+$(window).load(function() {
+	$('#slider').nivoSlider({ pauseTime:5000, pauseOnHover:false });
+});
+</script>
 {% endblock %}
 {%block menu%}{%endblock%}
 {% block filtros%}{%endblock%}
@@ -42,10 +44,30 @@
     </div><!-- Termina index left-->
     
     <div id="index_right">
-    <h2>La Cooperativa</h2>
-        <br><p>Where does it come from?
-Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32..</p>
-        <br><p>This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32..</p>
+    <h2>Central de Cooperativas Cafetaleras del Norte CECOCAFEN R.L </h2>
+    <br><p>
+    <b>CECOCAFEN</b> es una central de cooperativas con presencia en los departamentos de Matagalpa, Jinotega y Nueva Segovia, es una organización comprometida con el desarrollo social de las familias que integran a sus cooperativas asociadas.  Se trabaja con prácticas que conservan el ambiente en todo el proceso productivo y agroindustrial del café. Es un ente comprometido con el bienestar comunitario y donde la gente es lo  primero.</p>
+    <br/>
+    <p>Tenemos 12 organizaciones asociadas de las cuales 2,637 son productores socios de estos 709 son mujeres que representan el 27%, 1,928 son hombres esto representa el 73%</p>
+<br/>
+<b><h3>Producción de café por ciclos que aporta al Bienestar de las Familias</h3> </b>
+        <br>
+        <ul>
+            <li>60,000 quintales oro de café producidos para exportación </li>
+            <li>5,470 manzanas de café en plantación total (100% bajo sombra) </li>           
+        </ul>
+        <br>
+<b><h3>CECOCAFEN en el mercado internacional del café </h3> </b>
+        <p>
+        Nuestras exportaciones en el año 1997 fueron de 7,000 quintales oro, para el ciclo 2009-2010 la cantidad fue de 60,000 quintales oro, los mercados destinado fueron, Europa con un 54%, EEUU con un 42% y asia y nacional 4%
+        </p>
+        <br>
+<b><h3>Mujeres</h3> </b>
+<p>Tenemos 20 grupos organizados, 450 mujeres que controlan sus propios fondos de crédito y ahorro, cuentan con una polítca de genero ajustada a equidad en participación y la diversificación del negocio familiar</p>
+<br>    
+<b><h3>Jóvenes</h3> </b>
+<p>Tenemos grupos de música, danza, teatro y poesía, algunos jóvenes son becados(Secundaria, carreras técnicas y universidad) de ello el 52% de los jóvenes son <b>mujeres</b>, existen movimiento de promotores coopeativos, asumiendo responsabilidades organizativas y administrativas </p>
+    
     </div><!-- Termina index right-->
     <div class="separador" ></div>
     <div id="grafo_index">
