fix inicio de salud

--- a/templates/encuesta/inicio.html
+++ b/templates/encuesta/inicio.html
@@ -78,7 +78,7 @@
                             <a href="/familias" class="migracion">Migracion</a>
                             <a href="/alimento" class="seguridad">Alimento</a>
                             <a href="/servicios"class="servicios">Servicios</a>
-                            <a href="/servicios"class="salud">Salud</a>
+                            <a href="/salud"class="salud">Salud</a>
                             <a href="/finca"class="cultivos">Finca</a>
                             <a href="/ingresos"class="ingresos">Ingresos</a>
                             <a href="/equipos"class="bienes">Bienes</a>
