--- a/templates/encuesta/inicio.html
+++ b/templates/encuesta/inicio.html
@@ -47,7 +47,7 @@
                     <div id="formulario_tabla" >
                         <div class="form_label"><b>{{form.fecha.label}}</b></div>
                         <div class="form_widget">{{form.fecha}}</div>
-                        <div class="form_label"><b>{{form.departamento.label}}</b></div>
+                        <div class="form_label departa"><b>{{form.departamento.label}}</b></div>
                         <div class="form_widget">{{form.departamento}}</div>
                         <div class="form_label"><b>{{form.municipio.label}}</b></div>
                         <div class="form_widget">{{form.municipio}}</div>
